--- a/src/component/Nav/Nav.css
+++ b/src/component/Nav/Nav.css
@@ -1,8 +1,8 @@
 .nav{
     display:flex;
-    justify-content: flex-end;
+    justify-content: center;
     height:10vh;
-    background-color: azure; 
+   
   }
   .nav-bar{
     display:flex;
@@ -14,8 +14,9 @@
     padding:5px;
     box-sizing:border-box;
     border:none;
-    background-color:rgb(231, 231, 241);
-    color:gray;
+    border-radius:5px;
+    background-color:rgb(229, 229, 247);
+    color:rgb(158, 154, 154);
     
   }
   button:hover{
