--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,13 @@
   display:flex;
   justify-content: space-between;
   flex-wrap:wrap; 
-  padding:10px;
+  padding:15px;
+  height:auto;
 }
 .recordCard{
-  background-color: rgb(134, 166, 199);
-  
-  box-shadow: 4px 4px 9px 3px rgb(181, 187, 185);
+  background-color: rgb(203, 214, 197);
+  margin:15px;
+  box-shadow: 4px 4px 9px 3px rgb(117, 121, 120);
   border-radius: 4px;
   box-sizing:border-box;
   width: 20vw;
@@ -56,9 +57,9 @@
   display:flex;
   justify-content: space-evenly;
   align-items: center;
-  color:white;
+  color:rgb(87, 117, 216);
 }
 .tag{
-  font-weight:bold;
-  color:rgb(95, 109, 121);
+  font-weight:bolder;
+  color:rgb(47, 58, 66);
 }
