--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 
 .App {
   text-align: center;
-  font-family: Oswald;
+  font-family: 'Open sans';
+  background-color:#282c34;
 }
 
 .App-logo {
@@ -9,29 +10,7 @@
   height: 40vmin;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 
 .stats{
@@ -41,10 +20,12 @@
 }
 .recs{
   display:flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap:wrap; 
+  width:65%;
   padding:15px;
   height:auto;
+  margin:auto;
 }
 .recordCard{
   background-color: rgb(203, 214, 197);
@@ -53,8 +34,9 @@
   border-radius: 4px;
   box-sizing:border-box;
   width: 20vw;
-  height: 15vh;
+  height: 18vh;
   display:flex;
+  flex-direction:column;
   justify-content: space-evenly;
   align-items: center;
   color:rgb(87, 117, 216);
