--- a/src/component/Stat/Stat.css
+++ b/src/component/Stat/Stat.css
@@ -6,17 +6,21 @@
     box-shadow: 2px 4px 10px 1px gray;
     display:flex;
     margin:auto;
-    width:55%;
+    width:65%;
     justify-content:center;
     align-items:center;
 }
 
 .stamp{
-    background-color:rgb(162, 193, 212);
+    background-color:#282c34;
+    color:white;
+    font-size:20px;
     margin:5px;
     width:40%;
     height:40%;
     display:flex;
     justify-content:center;
     align-items:center;
+    border-radius:10px;
+    box-shadow: 2px 4px 10px 1px gray;
 }
